fixed navbar collapseing so that it works correctly on mobile devices

--- a/src/components/Pages/About/about.css
+++ b/src/components/Pages/About/about.css
@@ -7,6 +7,3 @@
     text-align: left;
 }
 
-.indent {
-    text-indent: 2em; 
-}
